--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   number={6},
   pages={1--12},
   year={2023},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
   preview={gegnn.png}
 }
 
