--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 
 @article{pang2023learning,
   title={Learning the geodesic embedding with graph neural networks},
-  author={Pang, Bo and Zheng, Zhongtian and Wang, Guoping and Wang, Peng-Shuai},
+  author={Pang*, Bo and Zheng*, Zhongtian and Wang, Guoping and Wang, Peng-Shuai},
   journal={ACM Transactions on Graphics (TOG)},
   volume={42},
   number={6},
