--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,8 @@
   pages={1--12},
   year={2023},
   publisher={ACM New York, NY, USA},
-  preview={gegnn.png}
+  preview={gegnn.png},
+  selected={true}
 }
 
 @article{zheng2024visual,
@@ -21,5 +22,6 @@
   journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2024},
   publisher={IEEE},
-  preview={house-compare.jpg}
+  preview={house-compare.jpg},
+  selected={true}
 }
