--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
 @article{pang2023learning,
   title={Learning the geodesic embedding with graph neural networks},
   author={Pang*, Bo and Zheng*, Zhongtian and Wang, Guoping and Wang, Peng-Shuai},
-  journal={ACM Transactions on Graphics (TOG)},
+  journal={ACM Transactions on Graphics (SIGGRAPH Asia)},
   volume={42},
   number={6},
   pages={1--12},
