--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,17 @@
 
 @string{aps = {American Physical Society,}}
 
+
+
+@misc{zhu2024rpbg,
+      title={RPBG: Towards Robust Neural Point-based Graphics in the Wild}, 
+      author={Qingtian Zhu and Zizhuang Wei and Zhongtian Zheng and Yifan Zhan and Zhuyu Yao and Jiawang Zhang and Kejian Wu and Yinqiang Zheng},
+      year={2024},
+      eprint={2405.05663},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
 @article{zheng2024visual,
   title={Visual-Preserving Mesh Repair},
   author={Zheng*, Zhongtian and Gao, Xifeng and Pan, Zherong and Li, Wei and Wang, Peng-Shuai and Wang, Guoping and Wu, Kui},
