--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 
 
 
-@misc{zhu2024rpbg,
+@article{zhu2024rpbg,
       title={RPBG: Towards Robust Neural Point-based Graphics in the Wild}, 
       author={Qingtian Zhu and Zizhuang Wei and Zhongtian Zheng and Yifan Zhan and Zhuyu Yao and Jiawang Zhang and Kejian Wu and Yinqiang Zheng},
       year={2024},
