--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,8 @@
       year={2024},
       eprint={2405.05663},
       archivePrefix={arXiv},
-      primaryClass={cs.CV}
+      primaryClass={cs.CV},
+      preview={RPBG.png}
 }
 
 @article{zheng2024visual,
