--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,8 @@
       eprint={2405.05663},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
-      preview={RPBG.png}
+      preview={RPBG.png},
+      arxiv={2405.05663}
 }
 
 @article{zheng2024visual,
@@ -22,7 +23,8 @@
   year={2024},
   publisher={IEEE},
   preview={house-compare.jpg},
-  selected={true}
+  selected={true},
+  html={https://ieeexplore.ieee.org/document/10379194/metrics#metrics}
 }
 
 @article{pang2023learning,
