--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
   publisher={IEEE},
   preview={house-compare.jpg},
   selected={true},
-  html={https://ieeexplore.ieee.org/document/10379194/metrics#metrics}
+  html={https://ieeexplore.ieee.org/document/10379194}
 }
 
 @article{pang2023learning,
