--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,7 +37,8 @@
   year={2023},
   publisher={ACM New York, NY, USA},
   preview={gegnn.png},
-  selected={true}
+  selected={true},
+  html={https://dl.acm.org/doi/10.1145/3618317}
 }
 
 
