--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,8 @@
   publisher={ACM New York, NY, USA},
   preview={gegnn.png},
   selected={true},
-  html={https://dl.acm.org/doi/10.1145/3618317}
+  html={https://dl.acm.org/doi/10.1145/3618317},
+  doi={10.1145/3618317}
 }
 
 
