--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
 
 @article{zheng2024visual,
   title={Visual-Preserving Mesh Repair},
-  author={Zheng*, Zhongtian and Gao, Xifeng and Pan, Zherong and Li, Wei and Wang, Peng-Shuai and Wang, Guoping and Wu, Kui},
+  author={Zheng, Zhongtian and Gao, Xifeng and Pan, Zherong and Li, Wei and Wang, Peng-Shuai and Wang, Guoping and Wu, Kui},
   journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2024},
   publisher={IEEE},
