--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,16 +4,25 @@
 @string{aps = {American Physical Society,}}
 
 
+@article{zheng2024proxy,
+  title={Proxy Asset Generation for Cloth Simulation in Games},
+  author={Zheng, Zhongtian and Wang, Tongtong and Feng, Qijia and Oan, Zherong and Gao, Xifeng and Wu, Kui},
+  journal={ACM Transactions on Graphics (SIGGRAPH)},
+  year={2024},
+  preview={proxy.jpg},
+  selected={true},
+}
 
 @article{zhu2024rpbg,
-      title={RPBG: Towards Robust Neural Point-based Graphics in the Wild}, 
-      author={Qingtian Zhu and Zizhuang Wei and Zhongtian Zheng and Yifan Zhan and Zhuyu Yao and Jiawang Zhang and Kejian Wu and Yinqiang Zheng},
-      year={2024},
-      eprint={2405.05663},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      preview={RPBG.png},
-      arxiv={2405.05663}
+  title={RPBG: Towards Robust Neural Point-based Graphics in the Wild}, 
+  author={Qingtian Zhu and Zizhuang Wei and Zhongtian Zheng and Yifan Zhan and Zhuyu Yao and Jiawang Zhang and Kejian Wu and Yinqiang Zheng},
+  year={2024},
+  journal={European Conference on Computer Vision},
+  eprint={2405.05663},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  preview={RPBG.png},
+  arxiv={2405.05663}
 }
 
 @article{zheng2024visual,
