--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{zheng2024proxy,
+  title={Neural Laplacian Operator for 3D Point Clouds},
+  author={Bo Pang, Zhongtian Zheng, Yilong Li, Guoping Wang, Peng-Shuai Wang},
+  journal={ACM Transactions on Graphics (SIGGRAPH Asia)},
+  year={2024},
+  preview={lap.jpg},
+  arxiv={2409.06506}
+}
 
 @article{zheng2024proxy,
   title={Proxy Asset Generation for Cloth Simulation in Games},
@@ -17,7 +25,7 @@
   title={RPBG: Towards Robust Neural Point-based Graphics in the Wild}, 
   author={Qingtian Zhu and Zizhuang Wei and Zhongtian Zheng and Yifan Zhan and Zhuyu Yao and Jiawang Zhang and Kejian Wu and Yinqiang Zheng},
   year={2024},
-  journal={European Conference on Computer Vision},
+  journal={European Conference on Computer Vision (Oral)},
   eprint={2405.05663},
   archivePrefix={arXiv},
   primaryClass={cs.CV},
