--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{zheng2024proxy,
+@article{zheng2024lap,
   title={Neural Laplacian Operator for 3D Point Clouds},
   author={Bo Pang, Zhongtian Zheng, Yilong Li, Guoping Wang, Peng-Shuai Wang},
   journal={ACM Transactions on Graphics (SIGGRAPH Asia)},
