--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,19 @@
   arxiv={2409.06506}
 }
 
+@article{pang2024neural,
+  title={Neural Laplacian Operator for 3D Point Clouds},
+  author={Pang, Bo and Zheng, Zhongtian and Li, Yilong and Wang, Guoping and Wang, Peng-Shuai},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={43},
+  number={6},
+  pages={1--14},
+  year={2024},
+  preview={lap.jpg},
+  publisher={ACM New York, NY, USA}
+}
+
+
 @article{zheng2024proxy,
   title={Proxy Asset Generation for Cloth Simulation in Games},
   author={Zheng, Zhongtian and Wang, Tongtong and Feng, Qijia and Oan, Zherong and Gao, Xifeng and Wu, Kui},
