--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{zheng2025diffhaircard,
+  title={Auto Hair Card Extraction for Smooth Hair with Differentiable Rendering},
+  author={Zheng, Zhongtian and Huang, Tao and Su, Haozhe and Ma, Xueqi and Shen, Yuefan and Wang, Tongtong and Yang, Yin and Gao, Xifeng and Pan, Zherong and Wu, Kui},
+  journal={ACM Transactions on Graphics (SIGGRAPH Asia)},
+  year={2025},
+  preview={haircard.jpg}
+}
+
 @article{pang2024neural,
   title={Neural Laplacian Operator for 3D Point Clouds},
   author={Pang, Bo and Zheng, Zhongtian and Li, Yilong and Wang, Guoping and Wang, Peng-Shuai},
